# tequila

./: .gitignore  Cargo.toml  Packager.toml  README.md  build.rs  relm4-development-guide-raw.md  tequila-config.json
base/src/: config.rs  error.rs  graphics.rs  lib.rs  traits.rs
crates/base/: Cargo.toml
crates/base/src/: config.rs  graphics.rs  lib.rs  traits.rs
crates/prefix/: Cargo.toml
crates/prefix/src/: app_ops.rs  desktop.rs  launch_ops.rs  lib.rs  manager.rs  prefix.rs  prefix_ops.rs  process_tracker.rs  runtime_ops.rs  wine_processes.rs
crates/registry/: Cargo.toml
crates/registry/src/: cache.rs  editor.rs  lib.rs  registry.rs  traits.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: anson2251.rs  download.rs  github.rs  graphics.rs  homebrew.rs  kron4ek.rs  lib.rs
crates/scan/: Cargo.toml
crates/scan/src/: icon_cache.rs  lib.rs
crates/service/: Cargo.toml
crates/service/src/: config_ops.rs  launch.rs  lib.rs  runtime_ops.rs  state.rs  sync.rs  terminal.rs
crates/store/: Cargo.toml
crates/store/src/: settings.rs  state.rs
crates/tequila/: Cargo.toml
crates/tequila/src/: main.rs
crates/ui/: Cargo.toml
crates/ui/assets/: style.css
crates/ui/src/: i18n.rs  lib.rs
crates/ui/src/app/: menu.rs  mod.rs
crates/ui/src/app/handlers/: mod.rs
crates/ui/src/apps/: actions.rs  add_popover.rs  info_dialog.rs  list.rs  mod.rs
crates/ui/src/debug/: mod.rs
crates/ui/src/dialogs/: mod.rs
crates/ui/src/prefix/: config.rs  create_dialog.rs  details.rs  export_dialog.rs  import_dialog.rs  list.rs  mod.rs
crates/ui/src/registry_editor/: fonts_tab.rs  general_tab.rs  graphics_tab.rs  mod.rs  platform_tab.rs
crates/ui/src/runtime/: mod.rs
crates/ui/src/settings/: graphics.rs  managed_download_row.rs  mod.rs  runtime.rs
data/lang/: en.json  zh-CN.json
docs/: graphics_ui_ux_design.md  implementation_roadmap.md  prefix_config_design.md  prefix_config_implementation.md  registry_keys.md  ui_design.md  wine_runtime_design.md
prefix/: Cargo.toml
prefix/src/: app_ops.rs  launch_ops.rs  lib.rs  manager.rs  prefix_ops.rs  process_tracker.rs  runtime_ops.rs  wine_processes.rs
registry/src/: cache.rs  editor.rs  keys.rs  lib.rs  registry.rs  traits.rs
runtime/: Cargo.toml
runtime/src/: download.rs  graphics.rs  homebrew.rs  kron4ek.rs  lib.rs
scan/src/: icon_cache.rs  icon_extract.rs  lib.rs
scripts/: bundle-macos.sh  check_i18n.py  extract-gstreamer-pkg.sh  tequila-terminal.applescript  tequila-terminal.sh
src/: main.rs
src.old/: main.rs
src.old/prefix/: error.rs  manager.rs  mod.rs  process_tracker.rs  scanner.rs  settings.rs  state.rs  traits.rs
src.old/prefix/regeditor/: mod.rs  registry.rs
src.old/ui/: add_app_popover.rs  executable_info_dialog.rs  mac_driver_tab.rs  main.rs  registered_apps_list.rs  virtual_desktop_tab.rs  x11_driver_tab.rs
src/prefix/: config.rs  download.rs  error.rs  graphics.rs  homebrew.rs  icon_cache.rs  icon_extract.rs  manager.rs  mod.rs  runtime.rs  scanner.rs  state.rs  traits.rs  wine_processes.rs
src/prefix/regeditor/: cache.rs  editor.rs  keys.rs  registry.rs  traits.rs
src/ui/: add_app_popover.rs  app_actions.rs  app_manager.rs  audio_tab.rs  d3d_tab.rs  dpi_tab.rs  executable_info_dialog.rs  mac_driver_tab.rs  main.rs  mod.rs  prefix_details.rs  prefix_list.rs  registered_apps_list.rs  registry_editor.rs  runtime_manager.rs  virtual_desktop_tab.rs  windows_version_tab.rs  x11_driver_tab.rs
store/src/: lib.rs  settings.rs  state.rs
tequila/: Cargo.toml
tequila/src/: main.rs
ui/: Cargo.toml  build.rs
ui/assets/: css.gresource.xml  style.css
ui/data/: icons.gresource.xml
ui/src/: add_app_popover.rs  app.rs  app_actions.rs  app_manager.rs  audio_tab.rs  d3d_tab.rs  dpi_tab.rs  executable_info_dialog.rs  lib.rs  mac_driver_tab.rs  prefix_config.rs  prefix_details.rs  prefix_list.rs  registered_apps_list.rs  registry_editor.rs  runtime_manager.rs  utils.rs  windows_version_tab.rs  x11_driver_tab.rs
ui/src/app/: menu.rs  mod.rs  resources.rs
ui/src/apps/: actions.rs  add_popover.rs  info_dialog.rs  list.rs  mod.rs
ui/src/dialogs/: mod.rs
ui/src/prefix/: config.rs  create_dialog.rs  details.rs  list.rs  mod.rs
ui/src/regconf/: general_tab.rs  mod.rs
ui/src/registry_editor/: general_tab.rs  graphics_tab.rs  mod.rs  platform_tab.rs
ui/src/runtime/: mod.rs
ui/src/settings/: graphics.rs  managed_download_row.rs  mod.rs  runtime.rs
