[package]
name = "tequila"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
gtk4 = "0.10.1"
relm4 = {version = "0.10.0", features = ["libadwaita"]}
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.3"
tracker = "0.2.2"
exe = "0.5.6"
regashii = "0.4.0"
async-trait = "0.1.68"
