[package]
name = "tequila"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
gtk4 = "0.11.3"
relm4 = {version = "0.11.0", features = ["libadwaita"]}
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
tracker = "0.2.2"
exe = "0.5.7"
regashii = "0.4.0"
async-trait = "0.1.89"
rusqlite = { version = "0.39", features = ["bundled"] }
sha2 = "0.11"
hex = "0.4"
zstd = "0.13"
notify = { version = "8", default-features = false, features = ["macos_kqueue"] }
image = "0.25"

[build-dependencies]
glib-build-tools = "0.22.0"
