[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
base = { path = "../base" }
prefix = { path = "../prefix" }
dirs = "6.0.0"
gtk4 = "0.11.3"
relm4 = {version = "0.11.0", features = ["libadwaita"]}
tracker = "0.2.2"
tokio = { version = "1.52.3", features = ["full"] }
notify = { version = "8", default-features = false, features = ["macos_kqueue"] }

[build-dependencies]
glib-build-tools = "0.22.0"
