[package]
name = "tequila"
version = "0.1.0"
edition = "2024"

[dependencies]
base = { path = "../base" }
runtime = { path = "../runtime" }
store = { path = "../store" }
prefix = { path = "../prefix" }
ui = { path = "../ui" }
relm4 = { version = "0.11.0", features = ["libadwaita"] }
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
dirs = "6.0.0"
