[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
base = { path = "../base" }
prefix = { path = "../prefix" }
service = { path = "../service" }
log = "0.4"
dirs = "6.0.0"
gtk4 = { version = "0.11.3", features = ["v4_10"] }
relm4 = {version = "0.11.0", features = ["libadwaita"]}
libadwaita = {version = "0.9", features = ["v1_7"]}
tracker = "0.2.2"
tokio = { version = "1.52.3", features = ["full"] }
notify = { version = "8", default-features = false, features = ["macos_kqueue"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
block2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSArray", "NSString", "NSURL"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSPanel", "NSResponder", "NSSavePanel", "NSWindow", "NSMenu", "NSMenuItem", "NSEvent"] }
gdk4-macos = { version = "0.11", features = ["v4_8"] }

[build-dependencies]
glib-build-tools = "0.22.0"
